페이지 타이틀 '보드게임 세상'으로 변경

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&family=Gaegu:wght@400;700&display=swap" rel="stylesheet">
-    <title>체스 게임</title>
+    <title>🎲 보드게임 세상</title>
   </head>
   <body>
     <div id="root"></div>
